--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,11 @@ body {
     border-radius: 1rem;
     background-color: #ffe9e3;
 }
+
+.page > h2 {
+    padding: 2rem 0 3rem 0;
+}
+
+#root:has(.player.track-loaded) > .page {
+    padding-bottom: 25vh;
+}
